name:                tush
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Fizzixnerd/tush#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Walker
maintainer:          matt.g.d.walker@gmail.com
copyright:           Matt Walker
category:            Language
build-type:          Simple
extra-source-files:  README.md
                     configure.ac
                     configure
                     cbits/io.c
                     include/io.h
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tush.Parse
                     , Tush.Parse.Lex
                     , Tush.Parse.Syntax
                     , Tush.Parse.Expr
                     , Tush.Parse.Statement
                     , Tush.Compile.LLVM.CodeGen
                     , Tush.Compile.LLVM.JIT
                     , Tush.REPL
                     , Lib
  build-depends:       HUnit
                     , QuickCheck
                     , base-noprelude >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , classy-prelude
                     , containers
                     , haskeline
                     , hspec
                     , llvm-hs
                     , llvm-hs-pure
                     , megaparsec
                     , mtl
                     , tasty
                     , tasty-hspec
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , vector
  c-sources:           cbits/io.c
  cc-options:         -Wall -fPIC
  ghc-options:        -Wall -dynamic -fPIC
  include-dirs:        include
  includes:            io.h
  install-includes:    io.h
  default-language:    Haskell2010
  default-extensions:  ForeignFunctionInterface

executable tush
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dynamic
  build-depends:       base
                     , tush
  default-language:    Haskell2010

test-suite tush-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tush
                     , megaparsec
                     , tasty
                     , QuickCheck
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dynamic
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Fizzixnerd/tush
