name:                tush
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Fizzixnerd/tush#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Walker
maintainer:          matt.g.d.walker@gmail.com
copyright:           Matt Walker
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tush.Compile.LLVM.Prelude
                     , Tush.Illuminate
                     , Tush.Compile.LLVM.Types
                     , Tush.Compile.LLVM.Instructions
                     , Tush.Expression
                     , Tush.Compile.LLVM.CodeGen2
                     , Tush.Syntax
                     , Tush.Syntax.Lex
                     , Tush.Syntax.Parse
                     , Tush.Typecheck2
                     , Tush.Unify
                     , Lib
  build-depends:       base
                     , HUnit
                     , QuickCheck
                     , bytestring
                     , classy-prelude
                     , containers
                     , equivalence
                     , exceptions
                     , haskeline
                     , hspec
                     , llvm-hs
                     , llvm-hs-pure
                     , megaparsec
                     , mtl
                     , sbv
                     , tasty
                     , tasty-hspec
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , vector
                     , uniplate
                     , lens
                     , ghci-pretty
  cc-options:         -Wall -fPIC
  ghc-options:        -Wall
  default-language:    Haskell2010

executable tush
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tush
  default-language:    Haskell2010

test-suite tush-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Tush.Parse.LexSpec
                     , Tush.Parse.ParseSpec
                     , Tush.Parse.ExprSpec
                     , Tush.Typecheck.TypecheckSpec
  build-depends:       base
                     , classy-prelude
                     , containers
                     , vector
                     , hspec
                     , tush
                     , megaparsec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Fizzixnerd/tush
